--- a/problem set/ps2.Rmd
+++ b/problem set/ps2.Rmd
@@ -85,9 +85,10 @@ If you worked with others or used resources outside of provided course material 
 
 Name(s) and corresponding problem(s)
 
-*Mahathi & Caroline Tilton problem 1.1, 1.2
+*Mahathi & Caroline, problem 1.1, 1.2
 *SDS fellows (Maggie), 1.3, 2.1
 *Rohil 2.2
+*Abbey, 3
 
 *I used the following sources to help complete this assignment:*
 
@@ -223,6 +224,8 @@ viomedians %>%  #check for the outlier
 ```{r}
 m2 <- subset(viomedians, zipcode == 10123) #create new dataset with outlier
 m + geom_point(data = m2) + 
+  # geom_segment(aes(x = 5, y = 30, xend = 3.5, yend = 25),
+  #              arrow = arrow(length = unit(0.2, "cm",)))
   ggrepel::geom_text_repel(data = m2, label = "10123", vjust = 2)
 ```
 
