--- a/Project 1/Updated Calendar Template/calendar_report_template.Rmd
+++ b/Project 1/Updated Calendar Template/calendar_report_template.Rmd
@@ -56,7 +56,8 @@ calendar_data <- "ktdata.ics" %>%
     # Use lubridate package to wrangle dates and times
     start_datetime = with_tz(start, tzone = "America/New_York"),
     end_datetime = with_tz(end, tzone = "America/New_York"),
-    duration_min = end_datetime - start_datetime,
+    duration_min = difftime(end_datetime, start_datetime, units = "mins"),
+    # duration_min = end_datetime - start_datetime,
     date = floor_date(start_datetime, unit = "day"),
     # Convert calendar entry to all lowercase and rename
     activity = tolower(summary))
