--- a/lab09_text-as-data/lab09_text-as-data.Rmd
+++ b/lab09_text-as-data/lab09_text-as-data.Rmd
@@ -190,7 +190,7 @@ poems_words %>%
 
 It is important to remove stop words otherwise you'll get a false understanding of the distribution of words. Stop words are obviously far more common than other words so you may have a distribution with 95% of the words being "the." 
 
-```{r top-words-plot, fig.width = 3.6, fig.height = 2.8}
+```{r top-words-plot2, fig.width = 3.6, fig.height = 2.8}
 poems_words_all %>%
   count(word, sort = TRUE) %>% 
   slice(1:10) %>%
@@ -258,8 +258,24 @@ wordcloud(words = word_frequencies$word,
 
 ##  <!-- 3.3-->**Your turn!** Create your own word cloud with 100 words.
 
-```{r}
+```{r custom-word-cloud2}
+# choose color palette from color brewer
+mypal <- brewer.pal(10, "Paired")
 
+wordcloud(words = word_frequencies$word, 
+          freq = word_frequencies$n,
+          min.freq = 20,
+          max.words = 100,
+          # plot the words in a random order
+          random.order = TRUE,
+          # specify the range of the size of the words
+          scale = c(2, 0.3),
+          # specify proportion of words with 90 degree rotation
+          rot.per = 0.15,
+          # colors words from least to most frequent
+          colors = mypal,
+          # font family
+          family = "sans")
 ```
 
 <!-- Part 4 ------------------------------------------------------------------->
@@ -267,6 +283,7 @@ wordcloud(words = word_frequencies$word,
 
 ## <!-- 4.1 -->**Computing term frequency statistics** The `bind_tf_idf()` function will compute the term frequency (tf), inverse document frequency (idf), and the tf-idf statistics for us. It requires a dataset with one row per word per poem, meaning we need a variable to indicate which poem the word comes from (`title`, in our tokenized dataset), a variable to indicate the word (`word` in the tokenized dataset), and a third variable to indicate the number of times that word appears in that specific poem. *This time, we do not need to remove stop words. Why not?*
 
+tf-idf basically says that if these words occur a bajillion times, they aren't important so it will automatically down-weight them. 
 
 
 ```{r tf-stats}
@@ -307,6 +324,7 @@ ggplot(data = top_tfidf, aes(x = reorder(word, tf_idf), y = tf_idf,
 
 ##  <!-- 5.1 -->The AFINN lexicon (Nielsen 2011) assigns words a score from -5 (negative sentiment) to +5 (positive sentiment).  Check out the AFINN lexicon using the code below. What do you think of the scores?  What is the rating for the word "slick"?  Does "slick" always have a positive connotation (can you think of a sentence where "slick" has a negative connotation)?
 
+The word slick has a slightly positive sentiment with a score of 2. This is interesting because when I first saw the word I had a negative reaction to it. But looking at the definition and thinking of the phrase "you're looking slick today!" means you're looking smooth!
 
 
 ```{r afinn-lex}
@@ -317,34 +335,65 @@ afinn_lexicon <- get_sentiments("afinn")
 
 ##  <!-- 5.2 -->Use the `get_sentiments()` function to create a dataframe `nrc_lexicon` that holds the NRC Word-Emotion Association lexicon (Mohammad 2010).  The NRC lexicon catergoizes words as yes/no for the following sentiment categories: positive, negative, anger, anticipation, disgust, fear, joy, sadness, surprise, and trust.  What does each row in this dataset represent? (Hint: it's *not* the same as the `afinn_lexicon` dataset.)
 
-
+Each row in the dataset represents a word in one column and a word for an associated emotion with that word in the other column of that row.
 
 ```{r}
-
+nrc_lexicon <-get_sentiments("nrc")
 ```
 
 ##  <!-- 5.3 -->User (and Consumer!) Beware: Do you see any issues in applying these lexicons (developed fairly recently) to the Emily Dickinson poems?
 
- 
+ Emily Dickinson, growing up in the early to mid 1800s utilized a very different diction than present day. Her words may not be present in our recently developed lexicon dataset. They also may mean something different than they do or are associated with today. 
 
 ##  <!-- 5.4 -->The lexicons are based on unigrams.  Do you see any disadvantages of basing the sentiment on single words?
 
-
+"an n-gram is a contiguous sequence of n items from a given sample of text or speech." from https://en.wikipedia.org/wiki/N-gram 
+This is a one word sequence. It may not catch the sentiment of bigrams or chains of texts that go hand in hand. 
 
 ##  <!-- 5.5 -->We can calculate how many words used in the poems are not found in the lexicons using the code below.  List a few words that are not in the NRC lexicon that appear in the poems.  What proportion of unigrams observed within this corpora of Dickinson poems are *not* scored by the NRC lexicon?
 
-
+21% are not scored by the NRC lexicon.
 
 ```{r missed-words}
 nrc_missed_words <- word_frequencies %>%
   anti_join(nrc_lexicon, by = "word")
 
+7948/37118 #(nrows of nrc missed / nrows of poem_words)
+
+nrow(nrc_missed_words)/nrow(poems_words)
 ```
 
 ##  <!-- 5.6 -->With these (rather important!) drawbacks in mind, let's go ahead and view the top words by sentiment classified by the NRC lexicon. That is, create a figure of the top 10 words under each sentiment, facetted by sentiment, for the following sentiments: anger, anticipation, fear, joy, surprise, and trust.  You can use code given in earlier chunks to guide you.
 
 ```{r}
+# poems_words %>%
+#   count(word, sort = TRUE) %>% 
+#   slice(1:10) %>%
+#   ggplot(aes(x = reorder(word, n), y = n, 
+#              color = word, fill = word)) +
+#   geom_col() +
+#   coord_flip() +
+#   guides(color = "none", fill = "none") +
+#   labs(x = NULL,
+#        y = "Number of instances",
+#        title = "The most common words in\nEmily Dickinson's poems")
 
+set.seed(69)
+poems_subset <- sample(poems_words$words, size = 10)
+
+top_nrc <- nrc_lexicon %>%
+  filter(text %in% poems_subset) %>%
+  arrange(desc(sentiment)) %>%
+  group_by(words) %>%
+  slice(1:10) %>%
+  ungroup()
+
+ggplot(data = poem_words, aes(x = reorder(word, poem_words), y = poem_words,
+                             fill = text)) +
+  geom_col(show.legend = FALSE) +
+  facet_wrap(~ title, ncol = 2, scales = "free") +
+  coord_flip() +
+  labs(x = NULL, y = "Sentiment")
 ```
 
 ##  <!-- 5.7 -->How might you summarize the sentiment of this corpus using the AFINN lexicon?
